Do not store more than 10M characters in ExternalCommand output.

BUG: 368674